--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,2 @@
-BeautifulSoup==3.2.1
-Cython==0.20.1post0
-Kivy==1.9.1
-Kivy-Garden==0.1.4
-PAM==0.4.2
-Pillow==2.3.0
-Pygments==1.6
-SpeechRecognition==3.3.1
-Twisted-Core==13.2.0
-Twisted-Web==13.2.0
-adium-theme-ubuntu==0.3.4
-apt-xapian-index==0.45
-argparse==1.2.1
-beautifulsoup4==4.2.1
-binwalk==2.1.1
-bottle==0.12.0
-buildozer==0.31
-calendar-indicator==0.3.1
-chardet==2.0.1
-classifier==1.5.2
-colorama==0.2.5
-command-not-found==0.3
-cv2==1.0
-debtagshw==0.1
-defer==1.0.6
-dependencies==0.6
-dirspec==13.10
-docutils==0.11
-duplicity==0.6.23
-facebook-sdk==1.0.0-alpha
-futures==2.1.6
-gunicorn==19.4.5
-gyp==0.1
-html5lib==0.999
-httplib2==0.8
-ipython==4.1.2
-jedi==0.7.0
-lockfile==0.8
-lxml==3.3.3
-matplotlib==1.3.1
-mercurial==2.8.2
-numpy==1.8.2
-oauthlib==0.6.1
-oneconf==0.3.7.14.04.1
-pexpect==3.1
-piston-mini-client==0.7.5
-ptyprocess==0.5.1
-pyOpenSSL==0.13
-pycrypto==2.6.1
-pycups==1.9.66
-pycurl==7.19.3
-pygame==1.9.1release
-pygobject==3.12.0
-pyliblzma==0.5.3
-pyparsing==2.0.1
-pyserial==2.6
-pysmbc==1.0.14.1
-python-apt==0.9.3.5ubuntu2
-python-dateutil==1.5
-python-debian==0.1.21-nmu2ubuntu2
-pyttsx==1.1
-pytz==2012c
-pyxdg==0.25
-reportlab==3.0
-requests==2.2.1
-roman==2.0.0
-sessioninstaller==0.0.0
-six==1.5.2
-software-center-aptd-plugins==0.0.0
-system-service==0.1.6
-unity-lens-photos==1.0
-urllib3==1.7.1
-virtualenv==1.11.4
-waitress==0.8.8
-wheel==0.24.0
-wsgiref==0.1.2
-xdiagnose==3.6.3build2
-youtube-dl==2016.01.27
-zope.interface==4.0.5
+beautifulsoup4
+requests
